--- a/app/src/main/res/layout-land/activity_add_note.xml
+++ b/app/src/main/res/layout-land/activity_add_note.xml
@@ -32,7 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text=""
-            android:hint="Enter Caption"
+            android:hint="@string/enter_caption_hint"
             android:ems="10"
             android:id="@+id/captionText"
             android:inputType="text|textAutoComplete|textMultiLine|textLongMessage"/>
@@ -40,7 +40,7 @@
 
 
         <Button
-            android:text="Capture image"
+            android:text="@string/button_capture_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
@@ -55,7 +55,7 @@
             android:onClick="dispatchTakePictureIntent" />
 
         <Button
-            android:text="Done"
+            android:text="@string/button_done"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
