--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -32,10 +32,10 @@
                 android:layout_marginBottom="5dp"/>
 
             <TextView
-                android:text="TextView"
+                android:text=""
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@android:color/darker_gray"
+                android:background="@color/colorAccent"
                 android:textColor="@android:color/black"
                 android:padding="16dp"
                 android:id="@+id/note_review_caption"
@@ -43,7 +43,7 @@
                 android:layout_alignParentStart="true" />
 
             <TextView
-                android:text="CAPTION"
+                android:text="@string/caption"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="25sp"
@@ -52,50 +52,6 @@
                 android:paddingStart="16dp"
                 android:layout_above="@id/note_review_caption"
                 android:id="@+id/note_caption_title" />
-
-
-
-
         </RelativeLayout>
-        <!--<LinearLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:orientation="vertical">-->
-            <!--<ImageView-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:maxHeight="400dp"-->
-                <!--android:maxWidth="350dp"-->
-                <!--android:scaleType="fitCenter"-->
-                <!--android:adjustViewBounds="true"-->
-                <!--app:srcCompat="@mipmap/ic_launcher"-->
-                <!--android:id="@+id/note_review_image"-->
-                <!--android:background="@color/black"-->
-                <!--android:layout_alignParentTop="true"-->
-                <!--android:layout_alignParentEnd="true"-->
-                <!--android:layout_marginTop="20dp" />-->
-
-            <!--<TextView-->
-                <!--android:text="CAPTION"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:textSize="25sp"-->
-                <!--android:background="@color/colorPrimaryDark"-->
-                <!--android:textColor="@android:color/white"-->
-                <!--android:paddingStart="16dp"-->
-                <!--android:layout_marginTop="20dp"-->
-                <!--android:layout_alignParentStart="true"-->
-                <!--android:id="@+id/note_caption_title" />-->
-            <!--<TextView-->
-                <!--android:text="TextView"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:textColor="@android:color/black"-->
-                <!--android:layout_alignParentStart="true"-->
-                <!--android:background="@android:color/darker_gray"-->
-                <!--android:layout_marginBottom="0dp"-->
-                <!--android:padding="16dp"-->
-                <!--android:id="@+id/note_review_caption" />-->
-        <!--</LinearLayout>-->
     </ScrollView>
 </RelativeLayout>
